fix buttons in spareparts on mobile

--- a/theme/static/css/buttons.css
+++ b/theme/static/css/buttons.css
@@ -86,18 +86,6 @@
     margin: 0 0.5rem;
 }
 
-@media (max-width: 640px) {
-    .options-btn {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .options-btn > * {
-        margin: 0;
-        width: fit-content;
-    }
-}
-
 /* Override form submission buttons */
 .form .btn,
 .login-form .btn,
